docs/styles/styles.css
#overlay {
    position: fixed;
    width: 100vw;
    height: 100vh;

    background: rgba(0, 0, 0, 0.5);

    display: flex;
    /*align-items: center;*/
    justify-content: center;

    z-index: 60;

    overflow-y: scroll;
}

#overlay .post {
    margin: var(--margin) auto auto auto;
}

#side-menu {
    position: fixed;
    width: calc(var(--line-wrap)*5);
    height: 100vh;

    background: var(--white);

    z-index: 30;

    box-shadow: var(--elevation-12);

    animation: side-menu-slide 300ms var(--ease);
}

@keyframes side-menu-slide {
    from {
        transform: translateX(calc(var(--line-wrap)*-5));
    }
}

body {
    background: var(--blueGray50);
    transform-origin: 50vw 50vh;
}


/*----------------------------------------------------------------------------*/


.intro {
    background: var(--cyan800);
    height: calc(var(--line-wrap)*1);
    box-shadow: var(--elevation-1);

    position: relative;

    z-index: 10;
}

.intro > .bar {
    display: flex;
    align-items: center;
}


/*----------------------------------------------------------------------------*/


.logo {
    display: inline-flex;
    padding: var(--line-margin);
}

.logo > span {
    margin-top: -1px;
}


/*----------------------------------------------------------------------------*/


.wrap.overflow {
    margin: auto;
    margin-top: calc(var(--line-wrap)*0);
    max-width: calc(var(--line-wrap)*11);

    height: calc(100vh - var(--line-wrap));

    overflow-y: scroll;
}


/*----------------------------------------------------------------------------*/


#post-placeholder {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;

    align-items: flex-start;
    justify-content: center;

    width: inherit;
    height: auto;
}


/*----------------------------------------------------------------------------*/


@keyframes post-appear {
    from {
        transform: translateY(calc(var(--line-wrap)*4));
        opacity: 0;
    }
    to {
        transform: translateY(0);
        opacity: 1;
    }
}

.post {
    width: 100%;
    box-sizing: border-box;
}

.post .top-bar {
    display: flex;
    height: 72px;
    padding: 16px;
}

.top-bar .bar {
    justify-content: center;
    flex-direction: column;
    padding-left: 8px;
    height: 40px;
}

.post .card {
    animation: post-appear 500ms ease;
}

.post .title-wrap {
    position: relative;
    margin: 0;
}

.title-wrap  .title {
    position: absolute;
    bottom: 0;
    margin: var(--margin);
}

.post img {
    display: block;
    object-fit: cover;
}

.post .author-avatar {
    border-radius: 50%;

    padding: 0px;

    height: 40px;
    width: 40px;
}

.post .article-image {
    margin: 0;
    width: 100%;
    max-height: calc(var(--line-wrap)*6);
}

.post .split {
    margin: 0;
}

.post .author, .timing {
    font-size: calc(var(--sp)*14);
}

.post .summary, .tags, .info {
    padding: var(--line-margin);
}

.post .tags > div {
    display: inline-block;
    text-transform: lowercase;
    margin-right: var(--line-margin);
}

.post .wrap.inner {
    display: flex;
    justify-content: space-between;
    flex-wrap: nowrap;
    align-items: baseline;
}

.title.no-image {
    position: static;
    margin: 0;
    padding: 0 var(--margin);
    padding-top: var(--line-margin);
    margin-bottom: calc(var(--line-margin)*-1);
}

.post-menu {
    height: 40px;
    --ripple-color: var(--button-white-ripple-color);
}


/*----------------------------------------------------------------------------*/


.bottom-bar {
    display: flex;
    padding: 0;
}

.bottom-bar .like {
    color: var(--pink600);
    --ripple-color: var(--pink600);

    padding: 0 8px;
    margin-left: 8px;

}

/*----------------------------------------------------------------------------*/


#plus {
    position: fixed;

    bottom: 32px;
    right: 32px;
    margin: 0;

    background: var(--pinkA700);

    box-shadow: var(--elevation-6);
    z-index: 50;
}

#plus:hover {
    box-shadow: var(--elevation-12);
}


/*----------------------------------------------------------------------------*/


.search-bar {
    margin: auto;

    width: 100%;
    max-width: calc(var(--line-wrap)*11);

    margin-top: calc(var(--line-wrap)*-1);
}

.search {
    display: flex;
    justify-content: space-between;

    background: var(--cyan900);

    box-shadow: var(--elevation-0);
}

.search input::-webkit-input-placeholder {
    color: var(--white);
}

.search:hover {
    box-shadow: var(--elevation-0);
}

form.search > input {
    margin-left: calc(var(--line-margin)*2) !important;
}


/*----------------------------------------------------------------------------*/


.refresh-more {
    position: absolute;
    top: 0;
    right: 0;
}


/*----------------------------------------------------------------------------*/


.button.show-full {
    margin-left: auto;
}


/*----------------------------------------------------------------------------*/


.show-more {
    --ripple-color: var(--button-white-ripple-color);
}


/*----------------------------------------------------------------------------*/


.add-form-glimpse {
    display: flex;
    justify-content: space-between;
    margin: 8px;
}

.add-form-glimpse img {
    border-radius: 50%;
    height: 64px;
    width: 64px;
    padding: 16px;
}

.add-form-glimpse .roboto {
    margin-right: auto;
}

.add-form-glimpse .send {
    color: var(--pink600);
    --ripple-color: var(--pink600);

    height: 64px;
    width: 64px;
    padding: 16px;
}


/*----------------------------------------------------------------------------*/


@media (max-width: 1024px) {
    .intro {
        height: calc(var(--line-wrap)*2);
    }

    .search-bar {
        margin-top: 0;
    }

    body > .main-content {
        padding: 0;
    }
}

